--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,7 @@
 
 <head>
 	<meta charset="utf-8" />
+  <meta name="p:domain_verify" content="794ab0db3358a78a2bec85b86a2f0856"/>
 	<link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	<meta name="description" content="Web site created using create-react-app" />
